XO_Project_UAT/Project--XOGrp--UAT/src/objects/echosign_dev1__SIGN_Agreement__c.object
<CustomObject>
    <customHelpPage>echosign_dev1__EchosignHelp</customHelpPage>
    <fields>
        <fullName>echosign_dev1__Account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Agreements</relationshipLabel>
        <relationshipName>Agreements</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>echosign_dev1__AdditionalOptions__c</fullName>
        <label>Additional Options</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>echosign_dev1__Additional_Recipient_1_User__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Additional Recipient 1 (User)</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Agreements</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>echosign_dev1__Additional_Recipient_2_User__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Additional Recipient 2 (User)</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Agreements1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>echosign_dev1__Additional_Recipient_3_User__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Additional Recipient 3 (User)</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Agreements2</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>echosign_dev1__AgreementLocale__c</fullName>
        <description>Select the language of the recipients.</description>
        <inlineHelpText>Select the language of the recipients.</inlineHelpText>
        <label>Language</label>
        <picklist>
            <picklistValues>
                <fullName>Chinese (China)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Chinese (Taiwan)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Czech (Czech Republic)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Danish (Denmark)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Dutch (Netherlands)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>English (United Kingdom)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>English (United States)</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>Finnish (Finland)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>French (France)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>German (Germany)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Icelandic (Iceland)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Indonesian (Indonesia)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Italian (Italy)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Japanese (Japan)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Korean (South Korea)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Malay (Malaysia)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Norwegian (Norway)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Polish (Poland)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Portuguese (Brazil)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Portuguese (Portugal)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Russian (Russia)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Spanish (Spain)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Swedish (Sweden)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Thai (Thailand)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Turkish (Turkey)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Vietnamese (Vietnam)</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>echosign_dev1__Attachment_ID_Order__c</fullName>
        <description>(Optional) Enter a list of comma separated Attachment IDs in the order to be displayed.</description>
        <inlineHelpText>(Optional) Enter a list of comma separated Attachment IDs in the order to be displayed.</inlineHelpText>
        <label>Attachment ID Order</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>echosign_dev1__Attachment_Service_Invocation_Count__c</fullName>
        <label>Attachment Service Invocation Count</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>echosign_dev1__Authoring__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Preview the document or drag and drop form fields or signature fields on to the document before it is sent for signature.</description>
        <inlineHelpText>Preview the document or drag and drop form fields or signature fields on to the document before it is sent for signature.</inlineHelpText>
        <label>Preview or Position Signature Fields</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>echosign_dev1__AutoUpdate__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Auto Update</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>echosign_dev1__Background_Action__c</fullName>
        <label>Background Action</label>
        <picklist>
            <picklistValues>
                <fullName>Cancel</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Delete</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Remind</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Send</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Update</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>echosign_dev1__Cancel_Delete_Notify_Signer__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Notify Signer</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>echosign_dev1__Cancel_Delete_Reason__c</fullName>
        <label>Cancel Delete Reason</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>echosign_dev1__Cc__c</fullName>
        <description>Send an extra copy of signed agreement to these email addresses.</description>
        <inlineHelpText>Send an extra copy of signed agreement to these email addresses.</inlineHelpText>
        <label>Send email copies to</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>echosign_dev1__Contract__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Contract</label>
        <referenceTo>Contract</referenceTo>
        <relationshipLabel>Agreements</relationshipLabel>
        <relationshipName>R00N70000001hM2JEAU</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>echosign_dev1__Data_Mapping_Error__c</fullName>
        <label>Data Mapping Error</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>echosign_dev1__Data_Mapping_Result__c</fullName>
        <label>Data Mapping Result</label>
        <picklist>
            <picklistValues>
                <fullName>Processing</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Completed</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Failed</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>echosign_dev1__DateSentDate__c</fullName>
        <formula>echosign_dev1__DateSent__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Date Sent (Date)</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>echosign_dev1__DateSent__c</fullName>
        <label>Date Sent</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>echosign_dev1__DateSignedDate__c</fullName>
        <formula>echosign_dev1__DateSigned__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Date Signed (Date)</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>echosign_dev1__DateSigned__c</fullName>
        <label>Date Signed</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>echosign_dev1__DateViewedDate__c</fullName>
        <formula>echosign_dev1__DateViewed__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Date Viewed (Date)</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>echosign_dev1__DateViewed__c</fullName>
        <label>Date Viewed</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>echosign_dev1__DaysUnsigned__c</fullName>
        <formula>NOW() - echosign_dev1__DateSent__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Days Unsigned</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>echosign_dev1__DaysUntilSigned__c</fullName>
        <formula>echosign_dev1__DateSigned__c - echosign_dev1__DateSent__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Days Until Signed</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>echosign_dev1__DaysUntilSigningDeadline__c</fullName>
        <description>Specify the number of days until the agreement expires and can no longer be signed.</description>
        <inlineHelpText>Specify the number of days until the agreement expires and can no longer be signed.</inlineHelpText>
        <label>Expire document in X days</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>echosign_dev1__Document_Key__c</fullName>
        <label>Document Key</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>echosign_dev1__Document__c</fullName>
        <formula>IF(
  AND( LEN(echosign_dev1__SignedPDF__c) &gt; 0, ISPICKVAL( echosign_dev1__Status__c , &apos;Signed&apos; ) ), HYPERLINK( echosign_dev1__SignedPDF__c ,   IMAGE(&apos;https://secure.echosignforsalesforce.com/images/salesforce-pdf-icon.gif&apos;, &apos;PDF&apos;) &amp; &apos; &apos; &amp; Name  &amp; &apos; - signed.pdf&apos;), 

IF( AND( LEN(echosign_dev1__SignedPDF__c) &gt; 0, ISPICKVAL( echosign_dev1__Status__c , &apos;Approved&apos; ) ), HYPERLINK( echosign_dev1__SignedPDF__c ,   IMAGE(&apos;https://secure.echosignforsalesforce.com/images/salesforce-pdf-icon.gif&apos;, &apos;PDF&apos;) &amp; &apos; &apos; &amp; Name  &amp; &apos; - approved.pdf&apos;), &quot;&quot;) )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Document</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>echosign_dev1__Enable_Automatic_Reminders__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Send an automatic weekly or daily reminder to recipients.</description>
        <inlineHelpText>Send an automatic weekly or daily reminder to recipients.</inlineHelpText>
        <label>Enable Automatic Reminders</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>echosign_dev1__Enable_Hosted_Signing__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Host signing to get in-person signatures from your computer or device.</description>
        <inlineHelpText>Host signing to get in-person signatures from your computer or device.</inlineHelpText>
        <label>Host signing for the first signer</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>echosign_dev1__EncodedPassword__c</fullName>
        <label>Encoded Password</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>echosign_dev1__ErrorMessage__c</fullName>
        <label>Error Message</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>echosign_dev1__External_Password__c</fullName>
        <label>Sign External Password</label>
        <length>175</length>
        <maskChar>asterisk</maskChar>
        <maskType>all</maskType>
        <type>EncryptedText</type>
    </fields>
    <fields>
        <fullName>echosign_dev1__External_Signers_Verification_Method__c</fullName>
        <label>External Signers Verification Method</label>
        <picklist>
            <picklistValues>
                <fullName>Password to sign agreement</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Knowledge based authentication</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Web identity authentication</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>echosign_dev1__Internal_Password__c</fullName>
        <label>Sign Internal Password</label>
        <length>175</length>
        <maskChar>asterisk</maskChar>
        <maskType>all</maskType>
        <type>EncryptedText</type>
    </fields>
    <fields>
        <fullName>echosign_dev1__Internal_Signers_Verification_Method__c</fullName>
        <label>Internal Signers Verification Method</label>
        <picklist>
            <picklistValues>
                <fullName>Password to sign agreement</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Knowledge based authentication</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Web identity authentication</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>echosign_dev1__LastEventId__c</fullName>
        <label>LastEventId</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>echosign_dev1__Legacy_Record_ID__c</fullName>
        <description>This field stores the Record ID for any records converted from the unmanaged package.</description>
        <inlineHelpText>This field stores the Record ID for any records converted from the unmanaged package.</inlineHelpText>
        <label>Legacy Record ID</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>echosign_dev1__Merge_Mapping_Error__c</fullName>
        <label>Merge Mapping Error</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>echosign_dev1__Merge_Mapping_Result__c</fullName>
        <label>Merge Mapping Result</label>
        <picklist>
            <picklistValues>
                <fullName>Processing</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Completed</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Failed</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>echosign_dev1__Merge_Mapping__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Merge Mapping</label>
        <referenceTo>echosign_dev1__SIGN_Merge_Mapping__c</referenceTo>
        <relationshipLabel>Agreements</relationshipLabel>
        <relationshipName>Agreements</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>echosign_dev1__Message__c</fullName>
        <defaultValue>&quot;Please review and sign this document.&quot;</defaultValue>
        <description>Specify a message to the recipients.</description>
        <inlineHelpText>Specify a message to the recipients.</inlineHelpText>
        <label>Message</label>
        <length>32000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>echosign_dev1__Minutes_Until_Signed__c</fullName>
        <formula>echosign_dev1__DaysUntilSigned__c * 1440</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Minutes Until Signed</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>echosign_dev1__More_Recipients__c</fullName>
        <label>Additional Recipients (Email)</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>echosign_dev1__NewPassword__c</fullName>
        <formula>IF(OR( echosign_dev1__PasswordProtectSign__c, echosign_dev1__PasswordProtectPDF__c),  IF( LEN(echosign_dev1__EncodedPassword__c) &gt; 0, &apos;Password has been set&apos;, &apos;&apos;),&apos;&apos;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Password</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>echosign_dev1__On_Load_Action__c</fullName>
        <label>On Load Action</label>
        <picklist>
            <picklistValues>
                <fullName>Cancel</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Delete</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Remind</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Send</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Update</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>View</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>echosign_dev1__Opportunity__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Opportunity</label>
        <referenceTo>Opportunity</referenceTo>
        <relationshipLabel>Agreements</relationshipLabel>
        <relationshipName>R00N70000001hM2REAU</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>echosign_dev1__Partner_Server_URL__c</fullName>
        <formula>$Api.Partner_Server_URL_70</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Partner Server URL</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>echosign_dev1__PasswordProtectPDF__c</fullName>
        <defaultValue>false</defaultValue>
        <description>The signed PDF that is sent to all parties is encrypted and this password will be required to open it. Don&apos;t lose the password as it is not recoverable.</description>
        <inlineHelpText>The signed PDF that is sent to all parties is encrypted and this password will be required to open it. Don&apos;t lose the password as it is not recoverable.</inlineHelpText>
        <label>Password required to view PDF</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>echosign_dev1__PasswordProtectSign__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Password required to sign</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>echosign_dev1__Password__c</fullName>
        <label>View Password</label>
        <length>175</length>
        <maskChar>asterisk</maskChar>
        <maskType>all</maskType>
        <type>EncryptedText</type>
    </fields>
    <fields>
        <fullName>echosign_dev1__Percent_Signed__c</fullName>
        <formula>IF(ISPICKVAL( echosign_dev1__Status__c , &quot;Signed&quot;),100,0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Percent Signed</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>echosign_dev1__Post_Sign_Redirect_Delay__c</fullName>
        <label>Post Sign Redirect Delay (seconds)</label>
        <precision>4</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>echosign_dev1__Post_Sign_Redirect_URL__c</fullName>
        <label>Post Sign Redirect URL</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>echosign_dev1__PreferFax__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>When checking this box, EchoSign  will send the document to the Contact&apos;s Fax number. If the Contact&apos;s Fax Number is empty, EchoSign will send the document to the Contact&apos;s Email address.</inlineHelpText>
        <label>Send written signatures to fax number</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>echosign_dev1__Process_Template__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Data Mapping</label>
        <referenceTo>echosign_dev1__SIGN_Data_Mapping__c</referenceTo>
        <relationshipLabel>Agreements</relationshipLabel>
        <relationshipName>Agreements</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>echosign_dev1__Rebuild_Recipient_List__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Set this field to force the basic Document Cloud agreement and advanced Document Cloud agreement pages to rebuild the related Recipient List using the Lookup fields on the Agreement record.</description>
        <inlineHelpText>Set this field to force the EchoSignAgreement and EchoSignAgreementAdvanced pages to rebuild the related Recipient List using the Lookup fields on the Agreement record.</inlineHelpText>
        <label>Rebuild Recipient List</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>echosign_dev1__Recipient2__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Additional Recipient 1 (Contact)</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Related Agreements</relationshipLabel>
        <relationshipName>Agreements</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>echosign_dev1__Recipient3__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Additional Recipient 2 (Contact)</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Related Agreements (2)</relationshipLabel>
        <relationshipName>Agreements2</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>echosign_dev1__Recipient4__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Additional Recipient 3 (Contact)</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Related Agreements (3)</relationshipLabel>
        <relationshipName>Agreements3</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>echosign_dev1__Recipient_Addresses__c</fullName>
        <label>Recipient Addresses</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>echosign_dev1__Recipient_Lead2__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Additional Recipient 1 (Lead)</label>
        <referenceTo>Lead</referenceTo>
        <relationshipLabel>Related Agreements</relationshipLabel>
        <relationshipName>Agreements</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>echosign_dev1__Recipient_Lead3__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Additional Recipient 2 (Lead)</label>
        <referenceTo>Lead</referenceTo>
        <relationshipLabel>Related Agreements (2)</relationshipLabel>
        <relationshipName>Agreements2</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>echosign_dev1__Recipient_Lead4__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Additional Recipient 3 (Lead)</label>
        <referenceTo>Lead</referenceTo>
        <relationshipLabel>Related Agreements (3)</relationshipLabel>
        <relationshipName>Agreements3</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>echosign_dev1__Recipient_User__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Recipient (User)</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Agreements3</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>echosign_dev1__RemindRecipient__c</fullName>
        <label>Remind recipient to sign</label>
        <picklist>
            <picklistValues>
                <fullName>Never</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>Every Day, Until Signed</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Every Week, Until Signed</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>echosign_dev1__Result__c</fullName>
        <formula>IF( AND(LEN(echosign_dev1__ErrorMessage__c) &gt; 0, ISPICKVAL( echosign_dev1__Status__c , &apos;Draft&apos;)), 
      IMAGE(&apos;https://secure.echosignforsalesforce.com/images/salesforce-error.gif&apos;, &apos;Error&apos;) &amp; &apos; &apos; &amp; echosign_dev1__ErrorMessage__c, 
      IF( AND(LEN(echosign_dev1__SignedPDF__c) &gt; 0, ISPICKVAL( echosign_dev1__Status__c , &apos;Signed&apos;)), 
           HYPERLINK( echosign_dev1__SignedPDF__c , IMAGE(&apos;https://secure.echosignforsalesforce.com/images/salesforce-pdf-icon.gif&apos;, &apos;PDF&apos;) &amp; &apos; &apos; &amp; Name &amp; &apos; - signed.pdf&apos;), 
           &apos;&apos;))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Result</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>echosign_dev1__ReturnURL_Text__c</fullName>
        <label>ReturnURL_Text</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>echosign_dev1__ReturnURL__c</fullName>
        <label>ReturnURL</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>echosign_dev1__SenderSigns__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Check this option if you also need to sign this agreement. Then select if you sign first or if your recipients sign first.</description>
        <inlineHelpText>Check this option if you also need to sign this agreement. Then select if you sign first or if your recipients sign first.</inlineHelpText>
        <label>I also need to sign this document</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>echosign_dev1__Sender_Recorded__c</fullName>
        <label>Sender Recorded</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>echosign_dev1__Sender_Signs_Only__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Sender Signs Only</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>echosign_dev1__Sender_User__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Send On Behalf Of</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Agreements_Senders</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>echosign_dev1__SignatureOrder__c</fullName>
        <label>Signature Order</label>
        <picklist>
            <controllingField>echosign_dev1__SenderSigns__c</controllingField>
            <picklistValues>
                <fullName>Recipient signs, then I sign</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>I sign, then the Recipient signs</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>echosign_dev1__SignatureType__c</fullName>
        <label>Signature Type</label>
        <picklist>
            <picklistValues>
                <fullName>Written Signature</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>e-Signature</fullName>
                <default>true</default>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>echosign_dev1__Signature_Flow__c</fullName>
        <label>Recipients sign in</label>
        <picklist>
            <picklistValues>
                <fullName>Order Entered</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>Any Order</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>echosign_dev1__SignedPDF__c</fullName>
        <label>Signed PDF</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>echosign_dev1__Signing_Deadline__c</fullName>
        <description>Specify the date when the agreement expires and can no longer be signed.</description>
        <inlineHelpText>Specify the date when the agreement expires and can no longer be signed.</inlineHelpText>
        <label>Signing Deadline</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>echosign_dev1__Signing_URL__c</fullName>
        <label>Signing URL</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>echosign_dev1__StatusVisible__c</fullName>
        <formula>CASE(
  TEXT(echosign_dev1__Status__c), 
  &apos;Waiting for Counter-Signature&apos;, &apos;Out for Signature&apos;, 
  &apos;Pre-Send&apos;, &apos;Not Yet Sent for Signature&apos;,
  TEXT(echosign_dev1__Status__c))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Status</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>echosign_dev1__Status__c</fullName>
        <label>Agreement Status</label>
        <picklist>
            <picklistValues>
                <fullName>Draft</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>Pre-Send</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Out for Signature</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Signed</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Waiting for Counter-Signature</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Send in Progress</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Approved</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Waiting for Counter-Approval</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Cancelled / Declined</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Out for Approval</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Expired</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Created</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>echosign_dev1__Sync_Data_Mapping__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Sync Data Mapping</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>echosign_dev1__Trigger_Process_Template__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Trigger Data Mapping</label>
        <type>Checkbox</type>
    </fields>
    <label>Agreement</label>
    <listViews>
        <fullName>echosign_dev1__All</fullName>
        <columns>NAME</columns>
        <columns>echosign_dev1__StatusVisible__c</columns>
        <columns>echosign_dev1__SignedPDF__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Agreement Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Agreements</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
    <validationRules>
        <fullName>Can_Not_Edit_Concierge_Agreement</fullName>
        <active>true</active>
        <description>Lock Concierge Opp Agreement</description>
        <errorConditionFormula>And (
echosign_dev1__Opportunity__r.RecordType.Name = &apos;Opp Concierge&apos;
/*,$Profile.Name &lt;&gt; &quot;System Administrator&quot;*/
)</errorConditionFormula>
        <errorMessage>You can not create or edit the Concierge Agreement</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>echosign_dev1__Maximum_Expiration_Days</fullName>
        <active>true</active>
        <errorConditionFormula>echosign_dev1__DaysUntilSigningDeadline__c &gt; 180</errorConditionFormula>
        <errorMessage>There is a maximum of 180 days before document expiration.</errorMessage>
    </validationRules>
</CustomObject>